samples/_failures_safe/1761220747_4531d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_368a924f.c: In function ‘main’:
./samples/SAFE/__tmp_368a924f.c:160:16: error: expected ‘)’ at end of input
  160 |     if (len > 0
      |        ~       ^
      |                )
./samples/SAFE/__tmp_368a924f.c:160:5: error: expected declaration or statement at end of input
  160 |     if (len > 0
      |     ^~
